--- a/Day1/AOC25.csproj
+++ b/Day1/AOC25.csproj
@@ -23,6 +23,9 @@
     <None Update="Day2\input-sample.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day2\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
