--- a/AOC25.Tests/AOC25.Tests.csproj
+++ b/AOC25.Tests/AOC25.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Day1\AOC25.csproj" />
+    <ProjectReference Include="..\AOC25\AOC25.csproj" />
   </ItemGroup>
 
 </Project>
